--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,251 +1,252 @@
-*, *::before, *::after{
-    box-sizing: border-box;
-    font-family: 'League Spartan', sans-serif;
-    font-weight: 700;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: "League Spartan", sans-serif;
+  font-weight: 700;
 }
 
 html {
-height: 100%;
+  height: 100%;
 }
 body {
-    min-height: 100%;
+  min-height: 100%;
 }
 
-:root{
-    --bg-color: hsl(222, 26%, 31%);
-    --keypad-color: hsl(223, 31%, 20%);
-    --screen-color: hsl(224, 36%, 15%);
-    --key-bg-color-1: hsl(225, 21%, 49%);
-    --key-shadow-color-1: hsl(224, 28%, 35%);
-    --key-bg-color-2: hsl(6, 63%, 50%);
-    --key-shadow-color-2: hsl(6, 70%, 34%);
-    --key-bg-color-3: hsl(30, 25%, 89%);
-    --key-shadow-color-3: hsl(28, 16%, 65%);
-    --text-color-1: hsl(221, 14%, 31%);
-    --text-color-2: hsl(0, 0%, 100%);
-    --text-color-3 : hsl(0, 0%, 100%);
-    --text-color-4 : hsl(0, 0%, 100%);
+:root {
+  --bg-color: hsl(222, 26%, 31%);
+  --keypad-color: hsl(223, 31%, 20%);
+  --screen-color: hsl(224, 36%, 15%);
+  --key-bg-color-1: hsl(225, 21%, 49%);
+  --key-shadow-color-1: hsl(224, 28%, 35%);
+  --key-bg-color-2: hsl(6, 63%, 50%);
+  --key-shadow-color-2: hsl(6, 70%, 34%);
+  --key-bg-color-3: hsl(30, 25%, 89%);
+  --key-shadow-color-3: hsl(28, 16%, 65%);
+  --text-color-1: hsl(221, 14%, 31%);
+  --text-color-2: hsl(0, 0%, 100%);
+  --text-color-3: hsl(0, 0%, 100%);
+  --text-color-4: hsl(0, 0%, 100%);
 }
 
-[data-theme="theme-2"]{
-    --bg-color: hsl(0, 0%, 90%);
-    --keypad-color: hsl(0, 5%, 81%);
-    --screen-color: hsl(0, 0%, 93%);
-    --key-bg-color-1: hsl(185, 42%, 37%);
-    --key-shadow-color-1: hsl(185, 58%, 25%);
-    --key-bg-color-2: hsl(25, 98%, 40%);
-    --key-shadow-color-2: hsl(25, 99%, 27%);
-    --key-bg-color-3: hsl(45, 7%, 89%);
-    --key-shadow-color-3: hsl(35, 11%, 61%);
-    --text-color-1: hsl(60, 10%, 19%);
-    --text-color-2: hsl(0, 0%, 100%);
-    --text-color-3: hsl(60, 10%, 19%);
-    --text-color-4 : hsl(0, 0%, 100%);
-}
-  
-
-[data-theme="theme-3"]{
-    --bg-color: hsl(268, 75%, 9%);
-    --keypad-color: hsl(268, 71%, 12%);
-    --screen-color: hsl(268, 71%, 12%);
-    --key-bg-color-1: hsl(281, 89%, 26%);
-    --key-shadow-color-1: hsl(285, 91%, 52%);
-    --key-bg-color-2: hsl(176, 100%, 44%);
-    --key-shadow-color-2: hsl(177, 92%, 70%);
-    --key-bg-color-3: hsl(268, 47%, 21%);
-    --key-shadow-color-3:  hsl(290, 70%, 36%);
-    --text-color-1: hsl(52, 100%, 62%);
-    --text-color-2: hsl(0, 0%, 100%);
-    --text-color-3: hsl(52, 100%, 62%);
-    --text-color-4: hsl(198, 20%, 13%);
-}
-  
-body{
-    padding:0;
-    margin:0;
-    background: var(--bg-color);
+[data-theme="theme-2"] {
+  --bg-color: hsl(0, 0%, 90%);
+  --keypad-color: hsl(0, 5%, 81%);
+  --screen-color: hsl(0, 0%, 93%);
+  --key-bg-color-1: hsl(185, 42%, 37%);
+  --key-shadow-color-1: hsl(185, 58%, 25%);
+  --key-bg-color-2: hsl(25, 98%, 40%);
+  --key-shadow-color-2: hsl(25, 99%, 27%);
+  --key-bg-color-3: hsl(45, 7%, 89%);
+  --key-shadow-color-3: hsl(35, 11%, 61%);
+  --text-color-1: hsl(60, 10%, 19%);
+  --text-color-2: hsl(0, 0%, 100%);
+  --text-color-3: hsl(60, 10%, 19%);
+  --text-color-4: hsl(0, 0%, 100%);
 }
 
-.calculator-grid{
+[data-theme="theme-3"] {
+  --bg-color: hsl(268, 75%, 9%);
+  --keypad-color: hsl(268, 71%, 12%);
+  --screen-color: hsl(268, 71%, 12%);
+  --key-bg-color-1: hsl(281, 89%, 26%);
+  --key-shadow-color-1: hsl(285, 91%, 52%);
+  --key-bg-color-2: hsl(176, 100%, 44%);
+  --key-shadow-color-2: hsl(177, 92%, 70%);
+  --key-bg-color-3: hsl(268, 47%, 21%);
+  --key-shadow-color-3: hsl(290, 70%, 36%);
+  --text-color-1: hsl(52, 100%, 62%);
+  --text-color-2: hsl(0, 0%, 100%);
+  --text-color-3: hsl(52, 100%, 62%);
+  --text-color-4: hsl(198, 20%, 13%);
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  background: var(--bg-color);
+}
+
+.calculator-grid {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: 430px;
+  grid-template-rows: auto 45px 100px 350px;
+  gap: 20px;
+}
+
+.keypad {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: repeat(5, 50px);
+  gap: 20px;
+  background-color: var(--keypad-color);
+  padding: 20px;
+  border-radius: 6px;
+}
+
+.keypad > button {
+  cursor: pointer;
+  font-size: 32px;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+}
+.keypad > button.btn-1 {
+  background-color: var(--key-bg-color-3);
+  color: var(--text-color-1);
+  box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-3);
+}
+.keypad > button.btn-2 {
+  background-color: var(--key-bg-color-1);
+  color: var(--text-color-2);
+  box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-1);
+}
+.keypad > button.btn-3 {
+  background-color: var(--key-bg-color-2);
+  color: var(--text-color-4);
+  box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-2);
+}
+
+.keypad > button:active {
+  filter: brightness(110%);
+}
+
+.span-two {
+  grid-column: span 2;
+}
+
+.output {
+  grid-column: 1 / -1;
+  background-color: var(--screen-color);
+  border-radius: 8px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.output .previous-operand {
+  color: var(--text-color-1);
+  font-size: 20px;
+}
+
+.output .current-operand {
+  color: var(--text-color-3);
+  font-size: 38px;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-left: 2px;
+  font-size: 25px;
+  color: var(--text-color-3);
+}
+
+#theme-toggler {
+  opacity: 0;
+  position: absolute;
+  display: none;
+}
+
+#theme-label {
+  display: flex;
+  justify-content: center;
+  line-height: 0.2em;
+  width: 2.5em;
+  height: 0.9em;
+  border-radius: 1.3em;
+  background: var(--keypad-color);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+  position: relative;
+}
+
+.ball {
+  height: 0.5em;
+  width: 0.5em;
+  border-radius: 50%;
+  background: var(--key-bg-color-2);
+  position: absolute;
+  transition: transform 150ms linear;
+  cursor: pointer;
+}
+
+#one {
+  opacity: 1;
+  top: 0.2em;
+  left: 0.2em;
+}
+
+#two {
+  opacity: 0;
+  top: 0.2em;
+  left: 1em;
+}
+
+#three {
+  opacity: 0;
+  top: 0.2em;
+  left: 1.8em;
+}
+
+#theme {
+  font-size: 12px;
+  margin: 0 0 2px 245px;
+}
+
+p {
+  margin: 0;
+}
+
+#numbers {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-bottom: -48px;
+}
+
+.number {
+  padding: 6px;
+  color: var(--text-color-3);
+}
+
+@media (max-width: 768px) {
+  .calculator-grid {
     display: grid;
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: 430px;
-    grid-template-rows: auto 45px 100px 350px;
+    grid-template-columns: 350px;
+    grid-template-rows: auto 45px 100px 440px;
     gap: 20px;
-}
-
-.keypad{
+  }
+  .keypad {
     display: grid;
     justify-content: center;
     align-content: center;
-    grid-template-columns:repeat(4,80px);
-    grid-template-rows: repeat(5, 50px);
+    grid-template-columns: repeat(4, 60px);
+    grid-template-rows: repeat(5, 65px);
     gap: 20px;
     background-color: var(--keypad-color);
     padding: 20px;
     border-radius: 6px;
-}
-
-.keypad > button{
-    cursor: pointer;
-    font-size: 32px;
-    outline: none;
-    border:none;
-    border-radius: 8px;
-}
-.keypad > button.btn-1{
-    background-color: var(--key-bg-color-3); 
-    color: var(--text-color-1);
-    box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-3);
-}
-.keypad > button.btn-2{
-    background-color: var(--key-bg-color-1);
-    color: var(--text-color-2);
-    box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-1);
-}
-.keypad > button.btn-3{
-    background-color: var(--key-bg-color-2);
-    color: var(--text-color-4);
-    box-shadow: inset 0px -3px 0px 0px var(--key-shadow-color-2);
-}
-
-.keypad > button:active{
-    filter: brightness(110%);
-}
-
-.span-two{
-    grid-column: span 2;
-}
-
-.output{
-    grid-column: 1 / -1;
-    background-color: var(--screen-color);
-    border-radius: 8px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    flex-direction: column;
-    padding: 10px;
-    word-wrap: break-word;
-    word-break: break-all;
-}
-
-.output .previous-operand{
-    color: var(--text-color-3);
-    font-size: 23px;
-}
-
-.output .current-operand{
-    color: var(--text-color-3);
-    font-size: 38px;
-}
-
-.top{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-left: 2px;
-    font-size: 25px;
-    color: var(--text-color-3);
-}
-
-#theme-toggler {
-	opacity: 0;
-	position: absolute;
-    display: none;
-}
-
-#theme-label {
-    display: flex;
-    justify-content: center;
-	line-height: 0.2em;
-	width: 2.5em;
-	height: 0.9em;
-	border-radius: 1.3em;
-	background: var(--keypad-color);
-	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-	position: relative;
-}
-
-.ball {
-	height: 0.5em;
-	width: 0.5em;
-	border-radius: 50%;
-	background: var(--key-bg-color-2);
-	position: absolute;
-	transition: transform 150ms linear;
-    cursor: pointer;
-}
-
-#one {
-    opacity: 1;
-    top: 0.2em;
-	left: 0.2em;
-}
-
-#two {
-    opacity: 0;
-    top: 0.2em;
-	left: 1em;
-}
-
-#three {
-    opacity: 0;
-    top: 0.2em;
-	left: 1.8em;
-}
-
-#theme{
-    font-size: 12px;
-    margin: 0 0 2px 245px;
-}
-
-p{
-   margin: 0; 
-}
-
-#numbers{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    margin-bottom: -48px;
-}
-
-.number{
-    padding: 6px;
-    color: var(--text-color-3)
-}
-
-@media (max-width: 768px) {
-    .calculator-grid{
-        display: grid;
-        justify-content: center;
-        align-content: center;
-        min-height: 100vh;
-        grid-template-columns: 350px;
-        grid-template-rows: auto 45px 100px 440px;
-        gap: 20px;
-    }
-    .keypad{
-        display: grid;
-        justify-content: center;
-        align-content: center;
-        grid-template-columns:repeat(4,60px);
-        grid-template-rows: repeat(5, 65px);
-        gap: 20px;
-        background-color: var(--keypad-color);
-        padding: 20px;
-        border-radius: 6px;
-    }
-    #theme-label {
-        line-height: 0.2em;
-        width: 60px;
-        height: 0.9em;
-    }
-    #theme{
-        font-size: 12px;
-        margin: 0 0 2px 200px;
-    }
   }
+  #theme-label {
+    line-height: 0.2em;
+    width: 60px;
+    height: 0.9em;
+  }
+  #theme {
+    font-size: 12px;
+    margin: 0 0 2px 200px;
+  }
+}
